--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-html{
-  height:100% 
+* {
+	font-family: "Inter";
 }
-
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}  
-
-
-
